add joined productive users section

--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
 * {
     padding: 0;
@@ -14,8 +15,8 @@
 .btn-primary {
     background: var(--primary-color);
     color: #FFFFFF;
-    border-radius: 6px;
-    padding: 12px 24px;
+    border-radius: 8px;
+    padding: 15px 30px;
     border: none;
     font-size: 16px;
     font-weight: 600;
@@ -165,7 +166,124 @@ nav {
 .launch-live p {
     color: var(--second-color);
     padding-bottom: 1rem;
+    font-size: 1.5rem;
 }
 .live-image img {
     border-radius: 2rem;
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+@media (max-width: 1024px) {
+  .live-preview {
+    padding: 0 2rem;
+  }
+
+  .launch-live h2 {
+    font-size: 2.5rem;
+  }
+
+  .launch-live p {
+    font-size: 1.3rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .live-preview {
+    flex-direction: column;
+    text-align: center;
+    gap: 2rem;
+    padding: 0 1rem;
+  }
+
+  .launch-live h2 {
+    font-size: 2rem;
+  }
+
+  .launch-live p {
+    font-size: 1.2rem;
+  }
+
+  .live-image img {
+    width: 100%;
+    height: auto;
+  }
+}
+
+@media (max-width: 480px) {
+  .launch-live h2 {
+    font-size: 1.8rem;
+  }
+
+  .launch-live p {
+    font-size: 1rem;
+  }
+
+  .live-preview {
+    margin: 2rem 1rem;
+  }
+}
+/* user section  */
+.stats-section {
+  background-color: #ecebff;
+  padding: 3rem 2rem;
+  border-radius: 16px;
+  text-align: center;
+  max-width: 1200px;
+  margin: 3rem auto;
+}
+
+.stats-section h2 {
+  font-size: 2.5rem;
+  margin-bottom: 2rem;
+}
+
+.stats-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+
+.stat-box h3 {
+  font-family: "Inter", sans-serif;
+  font-size: 5rem;
+  color: var(--primary-color);
+  margin-bottom: 0.5rem;
+  font-weight: 700;
+}
+
+.stat-box p {
+  font-size: 1rem;
+  color: var(--second-color);
+}
+
+/* Responsive Styles */
+@media (max-width: 768px) {
+  .stats-container {
+    flex-direction: column;
+  }
+
+  .stat-box h3 {
+    font-size: 2rem;
+  }
+
+  .stats-section h2 {
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .stat-box h3 {
+    font-size: 1.8rem;
+  }
+
+  .stat-box p {
+    font-size: 0.9rem;
+  }
+
+  .stats-section {
+    padding: 2rem 1rem;
+  }
 }
